WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33906
Clicking on an overflow scrollbar when the window doesn't have focus only focuses the window; it should start scrolling too
https://bugs.webkit.org/show_bug.cgi?id=33906
Summary
Clicking on an overflow scrollbar when the window doesn't have focus only foc...
mitz
Reported
2010-01-20 09:17:10 PST
<
rdar://problem/7489504
> Patch forthcoming.
Attachments
Accept the first mouse event if it occurs in a scroll bar
(5.21 KB, patch)
2010-01-20 09:18 PST
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-01-20 09:18:30 PST
Created
attachment 47041
[details]
Accept the first mouse event if it occurs in a scroll bar
mitz
Comment 2
2010-01-20 09:45:35 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/53553
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug