<rdar://problem/7489504> Clicking on an overflow scrollbar when the window doesn't have focus only focuses the window; it should start scrolling too https://bugs.webkit.org/show_bug.cgi?id=33906

Reviewed by Simon Fraser.

* Misc/WebElementDictionary.mm:
(+[WebElementDictionary initializeLookupTable]): Initialize WebElementIsInScrollBarKey.
(-[WebElementDictionary _isInScrollBar]): Added. Returns whether the HitTestResult contains
a scroll bar.
* WebView/WebHTMLView.mm:
(-[WebHTMLView _isScrollBarEvent:]): Added. Returns whether the event point is in a scroll
bar in this view.
(-[WebHTMLView acceptsFirstMouse:]): Accept scroll bar events.
* WebView/WebView.mm: Define WebElementIsInScrollBarKey.
* WebView/WebViewPrivate.h: Declare WebElementIsInScrollBarKey.



Canonical link: https://commits.webkit.org/44952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53553 268f45cc-cd09-0410-ab3c-d52691b4dbfc