WebKit/mac/Misc/WebElementDictionary.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006, 2007, 2008 Apple Inc. All rights reserved.
+ * Copyright (C) 2006, 2007, 2008, 2010 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -91,6 +91,7 @@ static void cacheValueForKey(const void *key, const void *value, void *self)
     addLookupKey(WebElementLinkLabelKey, @selector(_textContent));
     addLookupKey(WebElementLinkIsLiveKey, @selector(_isLiveLink));
     addLookupKey(WebElementIsContentEditableKey, @selector(_isContentEditable));
+    addLookupKey(WebElementIsInScrollBarKey, @selector(_isInScrollBar));
 }
 
 - (id)initWithHitTestResult:(const HitTestResult&)result
@@ -252,6 +253,11 @@ static NSString* NSStringOrNil(String coreString)
 - (NSNumber *)_isContentEditable
 {
     return [NSNumber numberWithBool:_result->isContentEditable()];
+}
+
+- (NSNumber *)_isInScrollBar
+{
+    return [NSNumber numberWithBool:_result->scrollbar() != 0];
 }
 
 @end
